--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -16,7 +16,11 @@
                     }
                 </style>
                 <h1>Examples</h1>
-                <hr/>
+
+                <hr />
+                    <h:link value="Signin page" outcome="signin" />
+                <hr />
+
                 <p>These BootsFaces examples are ports of Bootstrap 3 examples.</p>
                 <p>They are built using JSF and BootsFaces's components, to show the framework in action and how it can be used to build your pages.</p>
                 <p>You can get them as a point of start for developing your projects.</p>
