--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -20,6 +20,10 @@
                 <hr />
                     <h:link value="Signin page" outcome="signin" />
                 <hr />
+                    <h:link value="Store page" outcome="store" />
+                <hr />
+                    <h:link value="Detail page" outcome="detail" />
+                <hr />
 
                 <p>These BootsFaces examples are ports of Bootstrap 3 examples.</p>
                 <p>They are built using JSF and BootsFaces's components, to show the framework in action and how it can be used to build your pages.</p>
