Base implementation of store - just display items.

--- a/src/main/webapp/applayout/navbartop.xhtml
+++ b/src/main/webapp/applayout/navbartop.xhtml
@@ -11,8 +11,8 @@
 	    	Hint to editors: The menus follow the Chicago style of capitalization. Please capitalize everything but the "smaller" words. 
 	     -->
   </ui:remove>
-    <b:navBar brand="BootsFaces"
-              brandHref="http://www.bootsfaces.net/" inverse="true"
+    <b:navBar brand="Home"
+              brandHref="#{request.contextPath}" inverse="true"
               fixed="top">
         <b:container>
             <b:navbarLinks>
