--- a/src/main/webapp/store.xhtml
+++ b/src/main/webapp/store.xhtml
@@ -32,15 +32,18 @@
             <!-- Here foreach with itemas -->
             <ui:repeat value="#{product.products}" var="item">
 
-                <b:column span="4">
-                    <h:link outcome="starter_template">
-                        <!--<h:graphicImage library="examples" class="thumbnail" name="starter-template.jpg"/>-->
-                        <h:graphicImage class="thumbnail" value="#{imageBean.getBase64(item.id)}" dataURI="true" />
-                    </h:link>
-                    <h4>#{item.name}</h4>
-                    <p>#{item.description}</p>
-                    <p class="red">#{item.price} Kč</p>
-                </b:column>
+                <h:link outcome="detail">
+                    <f:param name="product_id" value="#{item.id}" />
+                    <b:column span="4">
+                        <h:link outcome="starter_template">
+                            <!--<h:graphicImage library="examples" class="thumbnail" name="starter-template.jpg"/>-->
+                            <h:graphicImage class="thumbnail" value="#{imageBean.getBase64(item.id)}" dataURI="true" />
+                        </h:link>
+                        <h4>#{item.name}</h4>
+                        <p>#{item.description}</p>
+                        <p class="red">#{item.price} Kč</p>
+                    </b:column>
+                </h:link>
 
             </ui:repeat>
 
