--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -24,6 +24,8 @@
                 <hr />
                     <h:link value="Detail page" outcome="detail" />
                 <hr />
+                    <h:link value="Registration" outcome="registration" />
+                <hr />
 
                 <p>These BootsFaces examples are ports of Bootstrap 3 examples.</p>
                 <p>They are built using JSF and BootsFaces's components, to show the framework in action and how it can be used to build your pages.</p>
