--- a/src/main/webapp/applayout/navbartop.xhtml
+++ b/src/main/webapp/applayout/navbartop.xhtml
@@ -21,21 +21,16 @@
                 <b:navbarLinks>
                     <b:navLink outcome="index" value="Home" iconAwesome="home" />
                 </b:navbarLinks>
-                <b:dropMenu value="Examples">
-                    <b:navLink value="Starter Template" outcome="/starter_template" icon="play-circle" />
-                    <b:navLink value="Grid" outcome="/grid" icon="play-circle" />
-                    <b:navLink value="Jumbotron" outcome="/jumbotron" icon="play-circle" />
-                    <b:navLink value="Navbar" outcome="/navbar" icon="play-circle" />
-                    <b:navLink value="Static Top navbar" outcome="/navbar-static-top" icon="play-circle" />
-                    <b:navLink value="Fixed Top navbar" outcome="/navbar-fixed-top" icon="play-circle" />
-                    <b:navLink value="Dashboard" outcome="/dashboard" icon="play-circle" />
-                    <b:navLink value="Sign in" outcome="/signin" icon="play-circle" />
-                    <b:navLink value="Theme" outcome="/theme" icon="play-circle" />
-                </b:dropMenu>
             </b:navbarLinks>
 
             <b:navbarLinks pull="right">
-                <b:navLink href="http://showcase.bootsfaces.net/" value="Showcase" iconAwesome="desktop" />
+                <b:dropMenu value="${loginBean.loggedUser().username}" iconAwesome="user" >
+                    <b:navLink>
+                        <h:form>
+                            <h:commandLink action="#{loginBean.logout}" value="Logout" iconAwesome="user" />
+                        </h:form>
+                    </b:navLink>
+                </b:dropMenu>
             </b:navbarLinks>
         </b:container>
     </b:navBar>
