Remove item from cart

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -20,7 +20,7 @@
                 <hr />
                     <h:link value="Store page" outcome="store" />
                 <hr />
-                    <h:link value="Detail page" outcome="detail" />
+                    <h:link value="Cart" outcome="cart" />
                 <hr />
 
                 <p>These BootsFaces examples are ports of Bootstrap 3 examples.</p>
