--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -22,6 +22,8 @@
                 <hr />
                     <h:link value="Cart" outcome="cart" />
                 <hr />
+                <h:link value="My orders" outcome="myOrders" />
+                <hr />
 
                 <p>These BootsFaces examples are ports of Bootstrap 3 examples.</p>
                 <p>They are built using JSF and BootsFaces's components, to show the framework in action and how it can be used to build your pages.</p>
